Fixed overflow when scrollbars were visible

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header{
     position: sticky;
     top: 0;
     z-index: 10;
-    max-width: 100vw;
+    max-width: 100%;
 }
 .nav_link a,ul,li {
     height: 7.5vh;
@@ -113,7 +113,7 @@ header{
 }
 
 .first_banner{
-    width : 100vw;
+    width : 100%;
 }
 
 .Ring_text h1{
@@ -136,7 +136,7 @@ header{
     line-height: 1.5rem;
     text-align: center;
     /* padding-bottom: 1rem; */
-    width:100vw;
+    width:100%;
 }
 
 .Ring_text p b{
@@ -145,12 +145,12 @@ header{
 }
 
 .container{
-    width:100vw;
+    width:100%;
 }
 
 .three-buttons{
     margin-top : 100px;
-    width: 100vw;
+    width: 100%;
     height : 10vh;
     padding : auto 20px;
 }
@@ -366,7 +366,7 @@ sup{
 }
 
 .Gift-card img{
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     position: relative;
 }
@@ -457,7 +457,7 @@ sup{
 }
 
 .features{
-    width: 100vw;
+    width: 100%;
     height: 150px;
     background-color: #0E0E0E;
     display: flex;
@@ -504,7 +504,7 @@ sup{
 }
 
 .form img{
-    width: 100vw;
+    width: 100%;
     height: 100%;
     z-index: 1;
     position: relative;
